--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -1,8 +1,6 @@
-title= "Creative Commons Music House"
-link(href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css",
-rel="stylesheet",
-integrity="sha384-Xqcy5ttufkC3rBa8EdiAyA1VgOGrmel2Y+wxm4K3kI3fcjTWlDWrlnxyD6hOi3PF",
-crossorigin="anonymous")
+title= "ittyurl -- url shortener* "
+link(href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/paper/bootstrap.min.css",
+rel="stylesheet")
 script(
   src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
   integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
