added footer to all pages

--- a/views/giveShortenedURL.pug
+++ b/views/giveShortenedURL.pug
@@ -16,5 +16,7 @@ html
               a(href="http://"+ encodedURL) Link
 
             p
-              a(href="/") Back to Home.  
+              a(href="/") Back to Home.
+            
+            include includes/footer.pug  
 
