--- a/views/index.pug
+++ b/views/index.pug
@@ -17,3 +17,4 @@ html
               button.btn.btn-primary(type='submit') Submit
               button.btn.btn-default(type='reset') Clear
     
+        include includes/footer.pug
